--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ p {
 /* End Projects section */
 
 /* About Section */
-#about .about {
+/* #about .about {
 	flex-direction: column-reverse;
 	text-align: center;
 	max-width: 1200px;
@@ -444,7 +444,7 @@ p {
 	width: 98%;
 	border: 7px solid maroon;
 	z-index: -1;
-}
+} */
 /* End About Section */
 
 /* contact Section */
